Stop double-spacing bio.

--- a/assets/scss/base.scss
+++ b/assets/scss/base.scss
@@ -888,9 +888,6 @@ p.separate {
 
             }
 
-            p.bio {
-                line-height: 2;
-            }
             form {
                 margin: 0px auto;
                 text-align: left;
